# bass

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  start.sh
data/: knowledge_base.json
src/bass/: __init__.py  app.py  settings.py
src/bass/models/: conversation.py  rag.py
src/bass/routes/: conversations.py
src/bass/services/: conversation.py  embedding.py  llm_service.py  local_embedding.py  rag_service.py  retrieval.py
src/bass/storage/: conversations.py  vector_store.py
static/: app.js  index.html
tests/: test_conversations.py  test_rag_integration.py  test_rag_service.py  test_retrieval.py
