[project]
name = "bass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
[tool.ruff]                                                                                                                                                          
line-length = 88
target-version = "py312"                                                                                                                                             
                
[tool.ruff.lint]                                                                                                                                                     
select = ["E", "F", "I", "N", "UP"]
                                                                                                                                                                    
[tool.mypy]     
python_version = "3.12"                                                                                                                                              
strict = true                                                                                                                                                        

[tool.pytest.ini_options]                                                                                                                                            
testpaths = ["tests"]
pythonpath = ["src"]