[project]
name = "bass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "fastapi>=0.135.1",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
[tool.ruff]                                                                                                                                                          
line-length = 88
target-version = "py312"                                                                                                                                             
                
[tool.ruff.lint]                                                                                                                                                     
select = ["E", "F", "I", "N", "UP"]
                                                                                                                                                                    
[tool.mypy]
python_version = "3.12"
mypy_path = "src"

# Core strictness (production-grade)
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true          # All functions must have types
disallow_any_generics = true          # list[Any] is an error
no_implicit_optional = true           # Optional must be explicit
warn_unused_ignores = true            # Clean up unnecessary ignores

# Pragmatic relaxations
allow_untyped_decorators = true       # FastAPI decorators often untyped                                                                                                                                                        

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that call external services (LLM, DB). Run with: -m integration",
]
